--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -18,12 +18,12 @@
     <h4 id="page-title" class="course-headline">{{{stripOnlyScript name}}}
       {{#userHasPermission "COURSE_EDIT"}}
         <div class="dropdown dropdown-course minimal-button">
-          <a class="btn btn-sm dropdown-toggle" title="Hilfe" data-toggle="dropdown">
+          <a class="btn btn-sm dropdown-toggle btn-course-dropdown" title="Weiteres" data-toggle="dropdown">
             <i class="fa fa-cog"></i>
           </a>
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-menu-course">
-            <a href="/courses/{{../_id}}/edit" class="dropdown-item">
+            <a href="/courses/{{../_id}}/edit" class="dropdown-item btn-course-edit">
               <i class="fa fa-edit" aria-hidden="true"></i> Kurs bearbeiten
             </a>
             <a data-href="courses/{{../_id}}/" href="#" class="dropdown-item btn-create-invitation">
